[BE] fix : S14P21D208-139  KIS 연동 리뷰 반영 및 stock/health 보안·예외·리소스 관리 개선